<resources>
    <string name="app_name">GK Bricks</string>
    <string name="permission_title">Allow GK Bricks to enjoy full functionalities</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="charging_percentage">%1$d%%</string>
    <string name="slogan"><![CDATA[Wire Cut & Box]]></string>
    <string name="general_settings">Settings</string>
    <string name="save_production">Save Production Bricks</string>
    <string name="history">History</string>
    <string name="no_data">No Data Available</string>
    <string name="reset_production_count">Reset Production Count</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="home">Home</string>
    <string name="bricks_count">Bricks Count</string>
    <string name="add_bricks_production">Add Production Bricks</string>
    <string name="total_production_bricks">Total Production Bricks</string>
    <string name="gk_bricks">GK Bricks</string>
    <string name="confirm">Confirm</string>
    <string name="reset_msg">Do you want to Reset the Production Count?</string>
    <string name="last_production_bricks">Last Production Count</string>
    <string name="saved_success">Saved Successfully ✅</string>
    <string name="save_failed">Failed to Save ❌</string>
    <string name="brick">Bricks</string>
    <string name="total">"Total: "</string>
    <string name="pushed">"Pushed: "</string>
    <string name="add_labour">Add Labour</string>
    <string name="labour_details">Labour Details</string>
    <string name="update_labour_work">Update Labour Work</string>
    <string name="view_all_labour">View All Labours</string>
    <string name="labour_name">Labour Name</string>
    <string name="salary">Salary</string>
    <string name="advance">Advance</string>
    <string name="sex">Sex:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="please_add_photo">Please Add Photo</string>
    <string name="field_is_required">Field is Requird</string>
    <string name="enter_salary">Enter Salary</string>
    <string name="updated_success">Updated successfully</string>
    <string name="updated_failed">Failed to update</string>
    <string name="deleted_success">Deleted successfully</string>
    <string name="delete_failed">Failed to delete</string>
    <string name="already_you_paid">Already you paid</string>
    <string name="one_day_salary">One Day Salary</string>
    <string name="total_working_salary">Total Working Salary</string>
    <string name="pay">Pay</string>
    <string name="date">Date</string>
    <string name="paid">Paid</string>
    <string name="paid_details">Paid Details</string>
    <string name="total_working">Total Salary</string>
    <string name="paid_salary">Paid Salary</string>
    <string name="try_again">Please try again</string>
    <string name="check_bricks_count">Check bricks count</string>
    <string name="select_one_date">Select any one date</string>
    <string name="salary_delete_title">Delete Salary</string>
    <string name="salary_delete_msg">Do you want to delete the working salary?</string>
    <string name="chamber_loading">Chamber Loading</string>
    <string name="chamber_unloading">Chamber Unloading</string>
    <string name="sand_loading">Sand Loading</string>
    <string name="firewood_loading">Firewood Loading</string>
    <string name="chamber_id">Chamber ID</string>
    <string name="count">Count</string>
    <string name="add_chamber_log">Add Chamber Loading Log</string>
    <string name="add_chamber">Add Chamber Loading</string>
    <string name="add_chamber_msg">Do you want to add the new chamber?</string>
    <string name="check_paid_amount">Check paid amount</string>
    <string name="up_to_working_salary">up to working salary</string>
    <string name="remaining_salary">Remaining balance</string>
    <string name="up_to_advance_salary">Advance salary</string>
    <string name="remaining_advance">Remaining advance</string>
    <string name="remaining_balance">Remaining balance</string>
    <string name="vendor_at_the_time_balance">At the time balance</string>
    <string name="vendor_now_balance">Remaining balance</string>
    <string name="close">Close</string>
    <string name="owner_name">Owner name</string>
    <string name="add_firewood_owner">Add Firewood Owner</string>
    <string name="add_sand_owner">Add Sand Owner</string>
    <string name="firewood_name_label">Wood name</string>
    <string name="firewood_price_label">Wood amount</string>
    <string name="sand_name_label">Sand name</string>
    <string name="sand_price_label">Sand amount</string>

    <string name="mann">Mann</string>
    <string name="semmann">Semmann</string>
    <string name="karisal_mann">Karisal mann</string>
    <string name="vandal_mann">Vandal mann</string>
    <string name="kattu_mann">Kattu mann</string>
    <string name="saralai_mann">Saralai mann</string>
    <string name="kalimann">Kalimann</string>
    <string name="manal_mann">Manal mann</string>

    <string name="add_firewood_log">Add firewood load</string>
    <string name="add_sand_log">Add sand load</string>

    <string name="viragu">Viragu</string>
    <string name="vembu">Vembu</string>
    <string name="thekku">Thekku</string>
    <string name="karuvellamaram">Karuvellamaram</string>
    <string name="alamaram">Alamaram</string>
    <string name="aththi_maram">Aththi maram</string>
    <string name="maamaram">Maamaram</string>
    <string name="panai_maram">Panai maram</string>
    <string name="thennai_maram">Thennai maram</string>
    <string name="pala_jathi">Pala Jathi</string>
    <string name="puliya_maram">Puliya maram</string>


    <string name="remaining_vendor_balance">Remaining balance</string>
    <string name="firewood_log_details">Firewood load details</string>
    <string name="sand_log_details">Sand load details</string>
    <string name="total_load_amount">Total load amount</string>
    <string name="remaining">Remaining</string>
    <string name="taken">Taken</string>
    <string name="add_bricks_taken">Add bricks taken</string>
    <string name="received">Received</string>
    <string name="received_money">Received money</string>
    <string name="name">Name</string>
    <string name="load_name">Load name</string>
    <string name="surukki">Surukki</string>
    <string name="customer_name">Customer name</string>


</resources>