<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:padding="@dimen/_5sdp"
    android:background="@color/app_bg"
    android:layout_marginTop="1dp"
    android:weightSum="10"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:text="@string/date"
        android:fontFamily="@font/sf_pro_display_regular"
        android:textColor="@color/white"
        android:textSize="@dimen/_10sdp"/>

    <TextView
        android:id="@+id/tvSalary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/salary"
        android:layout_gravity="center"
        android:gravity="center"
        android:fontFamily="@font/sf_pro_display_regular"
        android:textColor="@color/white"
        android:textSize="@dimen/_10sdp"/>

    <TextView
        android:id="@+id/tvPaid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2.5"
        android:text="₹0"
        android:layout_gravity="center"
        android:gravity="center"
        android:textStyle="bold"
        android:background="@drawable/click_effect"
        android:clickable="false"
        android:textColor="@color/red"
        android:fontFamily="@font/sf_pro_display_bold"
        android:textSize="@dimen/_10sdp"/>

    <TextView
        android:id="@+id/tvTotal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2.5"
        android:text="@string/total"
        android:layout_gravity="end"
        android:gravity="end"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:fontFamily="@font/sf_pro_display_bold"
        android:textSize="@dimen/_10sdp"/>

</LinearLayout>