<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_10sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_2sdp"
            android:background="@drawable/curved_new_bg"
            android:padding="@dimen/_5sdp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/title"
                android:textAlignment="center"
                android:padding="@dimen/_4sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/reset_production_count"
                android:fontFamily="@font/sf_pro_display_bold"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/_4sdp"
                android:textStyle="bold"
                android:textSize="@dimen/_12ssp" />
            <TextView
                android:id="@+id/message"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/sf_pro_display_regular"
                android:textColor="@color/white"
                android:text="@string/reset_msg"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:textSize="@dimen/_11ssp" />
            <LinearLayout
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_10sdp"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/btnClose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:layout_marginVertical="@dimen/_5sdp"
                    android:background="@drawable/selected_settings_bg"
                    android:backgroundTint="@color/red"
                    android:drawableStart="@drawable/ic_close"
                    android:drawablePadding="@dimen/_4sdp"
                    android:fontFamily="@font/sf_pro_display_medium"
                    android:gravity="center"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_5sdp"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_11ssp" />

                 <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/btnConfirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:layout_marginVertical="@dimen/_5sdp"
                    android:background="@drawable/selected_settings_bg"
                    android:backgroundTint="@color/green"
                    android:drawableStart="@drawable/ic_tick"
                    android:drawablePadding="@dimen/_3sdp"
                    android:fontFamily="@font/sf_pro_display_medium"
                    android:gravity="center"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_5sdp"
                    android:text="@string/confirm"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_11ssp" />

            </LinearLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>