<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    android:orientation="vertical"
    tools:context=".fragment.production.HomeFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/click_effect"
            android:padding="@dimen/_10sdp"
            android:visibility="visible">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/back_arrow_ic"
                android:tint="@color/white" />
        </TableRow>

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/sf_pro_display_bold"
            android:gravity="center"
            android:text="@string/add_labour"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp" />
    </RelativeLayout>

<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_5sdp"
        android:background="@drawable/selected_header_bg"
        android:orientation="vertical"
        android:padding="@dimen/_5sdp">

        <RelativeLayout
            android:layout_width="@dimen/_100sdp"
            android:layout_gravity="center"
            android:layout_height="@dimen/_100sdp">

            <ProgressBar
                android:id="@+id/pbProfile"
                android:layout_width="@dimen/_85sdp"
                android:layout_height="@dimen/_85sdp"
                android:layout_centerInParent="true"
                android:indeterminateTint="@color/white"
                android:visibility="gone"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/captureImageView"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:src="@drawable/ic_capture_icon"
                android:backgroundTint="@android:color/transparent"
                android:padding="8dp"
                android:layout_centerInParent="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:elevation="4dp" />
        </RelativeLayout>



        <!-- Labour Name -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlOwnerName"
            style="@style/MyTextInputLayoutStyle"
            app:boxBackgroundMode="outline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/sf_pro_display_medium"
            android:hint="@string/owner_name"
            android:textColor="@color/white"
            android:textColorHint="@color/lightGrey"
            android:textSize="@dimen/_10ssp"
            app:boxCornerRadiusBottomEnd="@dimen/_4sdp"
            app:boxCornerRadiusBottomStart="@dimen/_4sdp"
            app:boxCornerRadiusTopEnd="@dimen/_4sdp"
            app:boxCornerRadiusTopStart="@dimen/_4sdp"
            app:hintTextColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etOwnerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@color/lightGrey"
                android:textSize="@dimen/_10ssp" />
        </com.google.android.material.textfield.TextInputLayout>



        <!-- Advance -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlRemainingBalance"
            style="@style/MyTextInputLayoutStyle"
            app:boxBackgroundMode="outline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/sf_pro_display_medium"
            android:hint="@string/remaining_balance"
            android:textColor="@color/white"
            android:textColorHint="@color/lightGrey"
            android:textSize="@dimen/_10ssp"
            app:boxCornerRadiusBottomEnd="@dimen/_4sdp"
            app:boxCornerRadiusBottomStart="@dimen/_4sdp"
            app:boxCornerRadiusTopEnd="@dimen/_4sdp"
            app:boxCornerRadiusTopStart="@dimen/_4sdp"
            app:hintTextColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etRemainingBalance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textColor="@color/white"
                android:textColorHint="@color/lightGrey"
                android:textSize="@dimen/_10ssp" />
        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:id="@+id/pbLoad"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:indeterminate="true"
            android:indeterminateOnly="true"
            android:layout_marginTop="@dimen/_20sdp"
            android:visibility="gone"
            android:progressDrawable="@drawable/progress_horizontal" />


        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/btnView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TableRow
                android:id="@+id/btnCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/_3sdp"
                android:layout_weight="1"
                android:padding="@dimen/_10sdp"
                android:background="@drawable/selected_settings_bg"
                android:backgroundTint="@color/red"
                android:gravity="center">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableStart="@drawable/ic_close"
                    android:drawablePadding="@dimen/_2sdp"
                    android:fontFamily="@font/sf_pro_display_medium"
                    android:gravity="center"
                    android:padding="@dimen/_2sdp"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10ssp" />

            </TableRow>

            <TableRow
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_3sdp"
                android:padding="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@drawable/selected_settings_bg"
                android:backgroundTint="@color/green"
                android:gravity="center">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableStart="@drawable/ic_tick"
                    android:drawablePadding="@dimen/_2sdp"
                    android:fontFamily="@font/sf_pro_display_medium"
                    android:gravity="center"
                    android:padding="@dimen/_2sdp"
                    android:text="@string/save"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10ssp" />

            </TableRow>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>


</androidx.appcompat.widget.LinearLayoutCompat>
