<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/app_bg"
    tools:context=".fragment.production.HomeFragment">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_alignParentStart="true"
                android:background="@drawable/click_effect"
                android:padding="@dimen/_15sdp"
                android:visibility="visible">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/back_arrow_ic"
                    android:tint="@color/white" />

            </TableRow>


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/logoIV"
                android:layout_width="@dimen/_75sdp"
                android:layout_height="@dimen/_75sdp"
                android:src="@drawable/gk_logo_new"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_5sdp"/>

        </RelativeLayout>


        <LinearLayout
            android:layout_marginTop="@dimen/_4sdp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/gold_40"
                android:layout_margin="@dimen/_5sdp"
                android:weightSum="2">

                <LinearLayout
                    android:id="@+id/llAddLabour"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:background="@drawable/click_effect"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_130sdp"
                        android:src="@drawable/ic_employee_add"/>

                    <View
                        android:background="@color/lightGrey"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_1sdp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="@dimen/_10sdp"
                        android:fontFamily="@font/sf_pro_display_medium"
                        android:text="@string/add_labour"
                        android:textColor="@color/white"
                        android:gravity="center"
                        android:textSize="@dimen/_10ssp" />

                </LinearLayout>
                <View
                    android:background="@color/app_bg"
                    android:layout_width="5dp"
                    android:layout_height="match_parent"/>
                <LinearLayout
                    android:id="@+id/llViewLabourWork"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:background="@drawable/click_effect"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_130sdp"
                        android:src="@drawable/ic_employee_details"/>

                    <View
                        android:background="@color/lightGrey"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_1sdp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="@dimen/_10sdp"
                        android:fontFamily="@font/sf_pro_display_medium"
                        android:text="@string/labour_details"
                        android:textColor="@color/white"
                        android:gravity="center"
                        android:textSize="@dimen/_10ssp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/gold_40"
                android:layout_margin="@dimen/_5sdp"
                android:weightSum="2">

                <LinearLayout
                    android:id="@+id/llUpdateLabourWork"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:background="@drawable/click_effect"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_130sdp"
                        android:src="@drawable/ic_labour_work"/>

                    <View
                        android:background="@color/lightGrey"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_1sdp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="@dimen/_10sdp"
                        android:fontFamily="@font/sf_pro_display_medium"
                        android:text="@string/update_labour_work"
                        android:textColor="@color/white"
                        android:gravity="center"
                        android:textSize="@dimen/_10ssp" />

                </LinearLayout>
                <View
                    android:background="@color/app_bg"
                    android:layout_width="5dp"
                    android:layout_height="match_parent"/>
                <LinearLayout
                    android:id="@+id/llViewAllLabours"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:background="@drawable/click_effect"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_130sdp"
                        android:src="@drawable/ic_employee_group"/>

                    <View
                        android:background="@color/lightGrey"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_1sdp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="@dimen/_10sdp"
                        android:fontFamily="@font/sf_pro_display_medium"
                        android:text="@string/view_all_labour"
                        android:textColor="@color/white"
                        android:gravity="center"
                        android:textSize="@dimen/_10ssp" />

                </LinearLayout>

            </LinearLayout>




        </LinearLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>